<resources>
    <string name="app_name">Popular Movies 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="unknown">N/A</string>
    <string name="original_title">Original Name</string>
    <string name="popularity">Popularity Index</string>
    <string name="user_rating">User Rating</string>
    <string name="overview">Overview:</string>
    <string name="review_author">Review By</string>
    <string name="add_to_favs">Add to favorites</string>
    <string name="button_text_popularity">SORT BY POPULARITY</string>
    <string name="button_text_rating">SORT BY RATING</string>
    <string name="button_text_favorites">FAVORITES</string>
    <string name="shared_pref_file_name">uda_popular_movies_favorites</string>
</resources>
