<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@drawable/background_grad"
    android:id="@+id/main_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:numColumns="auto_fit"
            android:verticalSpacing="20dp"
            android:horizontalSpacing="10dp"
            android:columnWidth="90dp"
            android:stretchMode="columnWidth"
            android:gravity="center">
        </GridView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="20"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:id="@+id/button_sort_popularity"
            android:text="@string/button_text_popularity"
            android:textSize="10sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/button_text_rating"
            android:id="@+id/button_sort_rating"
            android:textSize="10sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/button_text_favorites"
            android:id="@+id/button_sort_favorites"
            android:textSize="10sp"/>

    </LinearLayout>




</LinearLayout>
