<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingBottom="23dp"
    android:id="@+id/root_view_for_detail_fragment"
    android:background="@drawable/background_grad">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/image_view_for_no_movie_sign"
        android:layout_gravity="top"
        android:src="@drawable/no_movie_sign"
        android:scaleType="center"
        android:adjustViewBounds="true"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/linear_layout_for_all_text_based_info"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="20">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:id="@+id/detail_fragment_image_view"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>



                <!-- Save To Favorites Row -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:id="@+id/row_add_to_favorites">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_remove_favorites_text_view"
                        android:text="@string/add_to_favs"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/image_view_for_star"
                        android:src="@drawable/star"
                        android:layout_gravity="center"/>

                </LinearLayout>


                <!-- Movie Name Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_title"
                    android:padding="3dp"
                    android:layout_marginTop="0dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/movie_title"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_movieTitle_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- Original Title Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_original_title"
                    android:padding="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/original_title"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_originalTitle_field"/>

                    </LinearLayout>

                </LinearLayout>




                <!-- Release Date Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_release_date"
                    android:padding="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/release_date"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_releaseDate_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- Popularity Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_popularity"
                    android:padding="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/popularity"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_popularity_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- User Rating (Vote Average) Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_user_rating"
                    android:padding="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/user_rating"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_userRating_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- Overview Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/row_overview"
                    android:padding="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/overview"
                        android:textColor="@color/titleTextColor"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/detailTextColor"
                        android:id="@+id/textView_overView_field"/>

                </LinearLayout>



                <!-- Container For All Reviews -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/main_container_gap"
                    android:id="@+id/container_for_all_reviews">
                </LinearLayout>



                <!-- Container For All Trailers -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/main_container_gap"
                    android:id="@+id/container_for_all_trailers">
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
            </LinearLayout>

        </LinearLayout>




    </ScrollView>

</LinearLayout>